--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
   "name": "mytribe",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-karma": "~0.6.2",
+    "grunt-ngmin": "0.0.3",
+    "grunt-google-cdn": "~0.2.2",
+    "time-grunt": "~0.1.1",
+    "grunt-rev": "~0.1.0",
+    "grunt-concurrent": "~0.4.1",
+    "grunt-contrib-compass": "~0.6.0",
+    "grunt-autoprefixer": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-cssmin": "~0.6.2",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-usemin": "~2.0.0",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-jshint": "~0.7.0",
+    "grunt-svgmin": "~0.2.0",
+    "grunt-contrib-imagemin": "~0.3.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
