--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "angular-fire": "~0.3.1"
+    "angular-fire": "~0.3.1",
+    "lodash": "~2.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
