--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "angular-fire": "~0.3.1",
-    "lodash": "~2.2.1"
+    "lodash": "~2.2.1",
+    "normalize-css": "~2.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
